--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> wpisz swoje:Imie i Nazwisko....</title>
+    <title>Mikołaj Wojdalski/title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/html" href="style.css" />
   </head>
 
   <body>
-  <h1>wpisz swoje:Imie i Nazwisko....</h1>
+  <h1>Mikołaj Wojdalski</h1>
 
     <script src="index.js"></script>
   </body>
