--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mikołaj Wojdalski/title>
+    <title> Mikołaj Wojdalski </title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/html" href="style.css" />
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-  <h1>Mikołaj Wojdalski</h1>
+    <div class="container">
+        <div class="top"></div>
+        <div class="bot"></div>
+		
+        <div class="right">
+			<h1> Mikołaj Wojdalski </h1>
+			<h2> Title</h2>
+		</div>
+	</div>
 
-    <script src="index.js"></script>
+<script src="index.js"></script>
   </body>
 </html>
