--- a/teams/index.html
+++ b/teams/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Zadanie</title>
+    <title>Mikołaj Wojdalski</title>
     <meta charset="UTF-8" />
     <link href="style.css" rel="stylesheet" />
   </head>
